kubernetes/envs/minikube/dappy/dappy-jobs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dappy-jobs
spec:
  template:
    spec:
      containers:
        - name: get-contract-logs
