kubernetes/envs/minikube/dappy/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      containers:
        - name: redis
          ports:
            - containerPort: 6379
              hostPort: 6379
