kubernetes/envs/minikube/dappy/dappy-node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dappy-node
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - dappy.dev
      secretName: dappy-node-tls
  rules:
    - host: dappy.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dappy-node
              port:
                number: 3001
